Update and rename pagina1.quiz.html to quiz1.html

--- a/quiz1.html
+++ b/quiz1.html
@@ -24,7 +24,7 @@
                 <img class="imagem_icone" src="favicon.ico" alt="Ícone">
             </div>
             <ul class="menu">
-                <a class="a" href="inicio.html">Início</a>                <a class="a" target="_blank" href="https://www.instagram.com/jubilados_ufpb/">Instagram</a>
+                <a class="a" href="index.html">Início</a>                <a class="a" target="_blank" href="https://www.instagram.com/jubilados_ufpb/">Instagram</a>
             </ul>  
         </nav>
     </header>
