--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="titulo1">
         <h1>QuizTória da Computação</h1>
-    <a href=quiz1.html"><button class="button">Iniciar Quiz</button></a>    
+    <a target="_blank" href=quiz1.html"><button class="button">Iniciar Quiz</button></a>    
     </div>
     
     <div class="thais">
