--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <img class="imagem_icone" src="favicon.ico" alt="Ícone">
                 </div>
                 <ul class="menu">
-                    <a class="a" href="index.html">Início</a>
+                    <a class="a" href="inicio.html">Início</a>
                     <a class="a" target="_blank" href="https://www.instagram.com/jubilados_ufpb/">Instagram</a>
                 </ul>  
             </nav>
@@ -29,7 +29,7 @@
 
     <div class="titulo1">
         <h1>QuizTória da Computação</h1>
-    <a target="_blank" href=quiz1.html"><button class="button">Iniciar Quiz</button></a>    
+    <a href="pagina1.quiz.html"><button class="button">Iniciar Quiz</button></a>    
     </div>
     
     <div class="thais">
@@ -50,7 +50,7 @@
 
 
     <footer> 
-            <h2>Produzido por:</h2>
+            <h2>Desenvolvido por:</h2>
             <nav>
                 <div class="nossosnomes">
 
@@ -59,13 +59,13 @@
                         <p><strong>Herick José</strong><br><a target="_blank" href="https://www.instagram.com/herick_jf/">@herick_jf</a></p>
                     </div>
                     <div>
-                        <img width="300px" height="300px" src="gabriel.png" alt="Gabriel">
-                        <p><strong>Gabriel Silva</strong><br><a target="_blank" href="https://www.instagram.com/_gabriell.sillva_/">@_gabriell.sillva_</a></p>
-                    </div>
-                    <div>
                         <img width="300px" height="300px" src="lael.png" alt="Lael">
                         <p><strong>Lael Gustavo</strong><br><a href="https://www.instagram.com/sunset.to.sunset/">@sunset.to.sunset</a></p>
                     </div>   
+                    <div>
+                        <img width="300px" height="300px" src="gabriel.png" alt="Gabriel">
+                        <p><strong>Gabriel Silva</strong><br><a target="_blank" href="https://www.instagram.com/_gabriell.sillva_/">@_gabriell.sillva_</a></p>
+                    </div>
                 </div>
             </nav>
     </footer>
