--- a/quiz1.html
+++ b/quiz1.html
@@ -49,7 +49,7 @@
 
 
     <footer> 
-        <h2>Produzido por:</h2>
+        <h2>Desenvolvido por:</h2>
         <nav>
             <div class="nossosnomes">
 
@@ -58,13 +58,13 @@
                     <p><strong>Herick José</strong><br><a target="_blank" href="https://www.instagram.com/herick_jf/">@herick_jf</a></p>
                 </div>
                 <div>
-                    <img width="300px" height="300px" src="gabriel.png" alt="Gabriel">
-                    <p><strong>Gabriel Silva</strong><br><a target="_blank" href="https://www.instagram.com/_gabriell.sillva_/">@_gabriell.sillva_</a></p>
-                </div>
-                <div>
                     <img width="300px" height="300px" src="lael.png" alt="Lael">
                     <p><strong>Lael Gustavo</strong><br><a href="https://www.instagram.com/sunset.to.sunset/">@sunset.to.sunset</a></p>
                 </div>   
+                <div>
+                    <img width="300px" height="300px" src="gabriel.png" alt="Gabriel">
+                    <p><strong>Gabriel Silva</strong><br><a target="_blank" href="https://www.instagram.com/_gabriell.sillva_/">@_gabriell.sillva_</a></p>
+                </div>
             </div>
         </nav>
 </footer>
