--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <img class="imagem_icone" src="favicon.ico" alt="Ícone">
                 </div>
                 <ul class="menu">
-                    <a class="a" href="inicio.html">Início</a>
+                    <a class="a" href="index.html">Início</a>
                     <a class="a" target="_blank" href="https://www.instagram.com/jubilados_ufpb/">Instagram</a>
                 </ul>  
             </nav>
@@ -29,7 +29,7 @@
 
     <div class="titulo1">
         <h1>QuizTória da Computação</h1>
-    <a href="pagina1.quiz.html"><button class="button">Iniciar Quiz</button></a>    
+    <a href="quiz1.html"><button class="button">Iniciar Quiz</button></a>    
     </div>
     
     <div class="thais">
