--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=MuseoModerno:ital,wght@0,100;0,300;0,400;0,600;1,200;1,500;1,700;1,800&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
         </style>
         
-    <title>QuizTória</title>
+    <title>Jubilados</title>
 </head>
 <body>
     <header>  
             <nav>
                 <div>
-                    <img class="imagem_icone" src="favicon.ico" alt="Ícone">
+                    <a target="_blank" href="https://www.instagram.com/jubilados_ufpb/
+                    "><img class="imagem_icone" src="jubilados.png" alt="Ícone"></a>
                 </div>
                 <ul class="menu">
                     <a class="a" href="inicio.html">Home</a>
