--- a/quiz1.html
+++ b/quiz1.html
@@ -21,7 +21,7 @@
     <header>  
         <nav>
             <div>
-                <img class="imagem_icone" src="favicon.ico" alt="Ícone">
+                <img class="imagem_icone" src="jubilados.png" alt="Ícone">
             </div>
             <ul class="menu">
                 <a class="a" href="index.html">Home</a>                <a class="a" target="_blank" href="https://www.instagram.com/jubilados_ufpb/">Instagram</a>
